[workspace]
resolver = "2"
members = [
]

[package]
name = "master-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.7.7", default-features = false, features = ["alloc"]   }
soroban-token-sdk = { version = "21.7.7", default-features = false  }
log = "0.4.22"
base32 = { version = "0.5.1" }
[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[workspace.dependencies]
base32 = "0.5.1"
soroban-sdk = "21.7.7"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
